# data_science_training_materials

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  myst.yml  pyproject.toml
files/: advanced-python-solutions.ipynb  advanced-sci-computing.ipynb  content.md  databases.md  intro-ml.ipynb  python_projects.ipynb  python_projects_2.md
files/Intro-to-Stats/: Interpret test results using Bayes theorem.ipynb  Intro to Bayesian Inference w Linear Regression.ipynb  stats-introduction.md
files/ml-intro/: README.md  day1-exercises.ipynb  day1-solutions.ipynb  day2-exercises.ipynb  day2-solutions.ipynb  ml-introduction.md
files/open-data/: open_data.md
files/reproducibility/: reproducibility.md
