[project]
name = "MPIA-DS-training"
version = "1.0.0"
description = "Training materials for data science at MPIA"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [ "numpy>=2.3.1,<3", "graphviz>=0.21,<0.22", "matplotlib>=3.10.3,<4", "mystmd>=1.5.1,<2", "jupyter-book>=1.0.4.post1,<2", "jupytext>=1.17.2,<2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
MPIA-DS-training = { path = ".", editable = true }

[tool.pixi.tasks]
